--- a/assets/kmtemp/transform/animation.html
+++ b/assets/kmtemp/transform/animation.html
@@ -388,7 +388,7 @@
 												<button type="button" class="replay disabled"><i>Replay</i></button>
 												<button type="button" class="stop disabled"><i>Stop</i></button>
 											</div>
-											<ul class="c_sub">
+											<ul class="c_sub enter_effect">
 												<li class="play1"><span><i>normal</i> : 한 사이클이 끝나도 같은 방향으로 움직입니다.</span></li>
 												<li class="play2"><span><i>alternate</i> : 한 사이클이 끝나면 역방향으로 움직입니다.</span></li>
 												<li class="play3"><span><i>reverse</i> : 처음부터 역방향으로 움직입니다.</span></li>
