--- a/assets/02-css/04-cssAdvanced/02-css_transition.html
+++ b/assets/02-css/04-cssAdvanced/02-css_transition.html
@@ -23,10 +23,37 @@
 	</blockquote>
 	<!--<p class="mt_ms"><code>transition: &lt;property&gt; &lt;duration&gt; &lt;timing-function&gt; &lt;delay&gt;</code></p>-->
 
-	<div class="view_editor ex_code mt_m" data-target="css/step03/4.2.transition/4.2.transition-syntax.html">
-		<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-			<div class="code_wrap"><textarea></textarea></div>
-		</div>
+	<div class="uk_gist_code_box mt_m" data-tit="transition">
+		<textarea readonly="readonly">
+			div {
+				/* 초기값 */
+				transition-property: all;
+				transition-duration: 0s;
+				transition-timing-function: ease;
+				transition-delay: 0s;
+
+				/* Apply to 1 property */
+				/* property name | duration */
+				transition: margin-left 4s;
+
+				/* property name | duration | delay */
+				transition: margin-left 4s 1s;
+
+				/* property name | duration | timing function | delay */
+				transition: margin-left 4s ease-in-out 1s;
+
+				/* Apply to 2 properties */
+				transition: margin-left 4s, color 1s;
+
+				/* Apply to all changed properties */
+				transition: all 0.5s ease-out;
+
+				/* Global values */
+				transition: inherit;
+				transition: initial;
+				transition: unset;
+			}
+		</textarea>
 	</div>
 
 	<!-- transition-property 속성 -->
@@ -38,31 +65,44 @@
 			CSS의 모든 속성에 적용(all)할 경우 생략 가능합니다.
 		</p>
 		<p class="mt_s">
-			<code>transition-property : all 또는 width, height, transform등의 css 속성</code><br>
-			보통 숫자값을 갖는 속성(property)들은 transition을 통해 점진적인 효과를 낼 수 있습니다. (전부 그렇지는 않으며, 브라우저마다 차이가 다릅니다.)<br>
-			예 : <code>opacity, border-radius, margin, color, font-size, padding</code> 등등
+			<!--<code>transition-property : all 또는 width, height, transform등의 css 속성</code><br>-->
+			보통 숫자값을 갖는 속성(property)들은 <code>transition</code>을 통해 점진적인 효과를 낼 수 있습니다. (전부 그렇지는 않으며, 브라우저마다 차이가 있습니다.)<br>
+			<!--예 : <code>opacity, border-radius, margin, color, font-size, padding</code> 등등-->
 		</p>
+		<div class="uk_gist_code_box mt_ms" data-tit="transition-property">
+			<textarea readonly="readonly">
+				div {
+					transition-property: none | all | [property];
+				}
+			</textarea>
+		</div>
 		<ol class="ol_lst mt_ms indent">
 			<li><strong class="t_black weight-500">none</strong> : transition 효과를 지정하지 않습니다.</li>
 			<li><strong class="t_black weight-500">all</strong> : 모든 속성이 transition 효과를 얻습니다.</li>
-			<li><strong class="t_black weight-500">property</strong> : transition 효과를 얻게될 속성을 지정합니다.</li>
+			<li>
+				<strong class="t_black weight-500">property</strong> : transition 효과를 얻게될 속성을 지정합니다.
+				<code>transform, width, height, opacity, border-radius, margin, color, font-size, padding</code> 등등
+			</li>
 		</ol>
 	</section>
 
 	<!-- transition-duration 속성 (필수 선언) -->
 	<section class="txt_ex indent mt_xxl">
-		<h2 class="ml_mn"><i class="t_blue">transition-duration</i> 속성 (필수 선언)</h2>
+		<h2 class="ml_mn"><i class="t_blue">transition-duration</i> 속성 <span class="t_red">(필수 선언)</span></h2>
 		<p class="mt_ms">
-			트랜지션이 일어나는 지속 시간을 명시합니다.<br>
+			transition 효과의 지속 시간을 명시합니다.<br>
 			트랜지션 동안 모든 속성에 적용하는 단일 지속 시간을 명시하거나, 다른 주기로 각 속성이 트랜지션하게 하는 여러 지속 시간을 명시할 수 있습니다.
 		</p>
 		<p class="mt_s">
-			transition 효과의 지속 시간 표기합니다.<br>
 			밀리초(millisecond, ms) 또는 초(second, s)로 지속시간을 설정할 수 있습니다.<br>
 			1s는 1초이며, 0.1s는 숫자 0를 생략하고 .1s로 표기 가능합니다. (ms의 단위로 할 경우 1초 = 1000ms)<br>
 		</p>
-		<div class="line_code_box line_code_number mt_ms">
-			<code>transition-duration : 1s | 1000ms;</code>
+		<div class="uk_gist_code_box mt_ms" data-tit="transition-duration">
+			<textarea readonly="readonly">
+				div {
+					transition-duration : 1s | 1000ms;
+				}
+			</textarea>
 		</div>
 	</section>
 
@@ -78,15 +118,25 @@
 			이징(<code>easing</code>: 시간에 따른 파라미터 값의 변화율을 명시하는 함수)을 선택할 수도 있습니다.<br>
 			변화의 시작과 끝 타이밍을 정의하며, 조금 더 정교한 또는 현실적인 움직임을 표현하기 위해 사용됩니다.<br>
 			기본값은 <code>ease</code>이며 기본값으로 사용할 경우 생략 가능합니다.<br>
-			<code>transition-timing-function : ease, linear, ease-in, ease-out, ease-in-out, step(n), cubic-bezier(n,n,n,n);</code>
 		</p>
+		<div class="uk_gist_code_box mt_ms" data-tit="transition-timing-function">
+			<textarea readonly="readonly">
+				div {
+					transition-timing-function: ease | linear | ease-in | ease-out | ease-in-out | step(n) | cubic-bezier(n,n,n,n);
+				}
+			</textarea>
+		</div>
 
 		<!-- 1. ease -->
 		<article class="indent mt_ml">
 			<h3 class="ml_mn">1. <i class="t_blue">ease</i></h3>
 			<p class="mt_sm t_black">초반은 느리게, 중간은 빠르게, 종료지점은 느리게 변화가 진행됩니다.</p>
-			<div class="line_code_box mt_s">
-				<code>transition: width 2s ease;</code>
+			<div class="uk_gist_code_box mt_ms" data-tit="transition-timing-function [ease]">
+				<textarea readonly="readonly">
+					div {
+						transition-timing-function: ease;
+					}
+				</textarea>
 			</div>
 		</article>
 
@@ -94,8 +144,12 @@
 		<article class="indent mt_ml">
 			<h3 class="ml_mn">2. <i class="t_blue">linear</i></h3>
 			<p class="mt_sm t_black">시작부터 종료까지 동일한 속도로 진행됩니다.</p>
-			<div class="line_code_box mt_s">
-				<code>transition: width 2s linear;</code>
+			<div class="uk_gist_code_box mt_ms" data-tit="transition-timing-function [linear]">
+				<textarea readonly="readonly">
+					div {
+						transition-timing-function: linear;
+					}
+				</textarea>
 			</div>
 		</article>
 
@@ -103,8 +157,12 @@
 		<article class="indent mt_ml">
 			<h3 class="ml_mn">3. <i class="t_blue">ease-in</i></h3>
 			<p class="mt_sm t_black">느리게 시작한 후 일정한 속도에 다다르면 그 상태로 등속 운동합니다.</p>
-			<div class="line_code_box mt_s">
-				<code>transition: width 2s ease-in;</code>
+			<div class="uk_gist_code_box mt_ms" data-tit="transition-timing-function [ease-in]">
+				<textarea readonly="readonly">
+					div {
+						transition-timing-function: ease-in;
+					}
+				</textarea>
 			</div>
 		</article>
 
@@ -112,42 +170,63 @@
 		<article class="indent mt_ml">
 			<h3 class="ml_mn">4. <i class="t_blue">ease-out</i></h3>
 			<p class="mt_sm t_black">일정한 속도의 등속으로 시작해서 점점 느려지면서 멈춥니다.</p>
-			<div class="line_code_box mt_s">
-				<code>transition: width 2s ease-out;</code>
+			<div class="uk_gist_code_box mt_ms" data-tit="transition-timing-function [ease-out]">
+				<textarea readonly="readonly">
+					div {
+						transition-timing-function: ease-out;
+					}
+				</textarea>
 			</div>
 		</article>
 
 		<!-- 5. ease-in-out -->
 		<article class="indent mt_ml">
 			<h3 class="ml_mn">5. <i class="t_blue">ease-in-out</i></h3>
-			<p class="mt_sm t_black"><i class="t_blue">ease</i>와 비슷합니다. 초반은 느리게, 중간은 빠르게, 종료지점은 느리게 변화가 진행됩니다.</p>
-			<div class="line_code_box mt_s">
-				<code>transition: width 2s ease-in-out;</code>
+			<p class="mt_sm t_black"><code class="t_blue">ease</code>와 비슷합니다. 초반은 느리게, 중간은 빠르게, 종료지점은 느리게 변화가 진행됩니다.</p>
+			<div class="uk_gist_code_box mt_ms" data-tit="transition-timing-function [ease-in-out]">
+				<textarea readonly="readonly">
+					div {
+						transition-timing-function: ease-in-out;
+					}
+				</textarea>
 			</div>
 		</article>
 
 		<!-- 6. steps(n) -->
 		<article class="indent mt_ml">
 			<h3 class="ml_mn">6. <i class="t_blue">steps(n)</i></h3>
-			<p class="mt_sm t_black">애니메이션의 흐름을 Step(단계)화해서 제어할 수 있습니다.</p>
-			<div class="line_code_box line_code_number mt_s">
-				<ul>
-					<li>/* step-start */</li>
-					<li>transition: width 2s step-start;</li>
-					<li>/* step-end */</li>
-					<li>transition: width 2s step-end;</li>
-					<li>/* steps */</li>
-					<li>transition: width 2s steps(4, start)</li>
-				</ul>
+			<p class="mt_sm t_black">
+				애니메이션의 흐름을 Step(단계)화해서 제어할 수 있습니다.<br>
+				<code>duration</code> 값과 연계해서 선언하여 일종의 Frame Rate(초당 프레임 수)를 설정하거나 혹은, 셀 애니메이션처럼 연계된 동작을 표현할 수도 있습니다.
+			</p>
+			<div class="uk_gist_code_box mt_ms" data-tit="transition-timing-function [steps(n)]">
+				<textarea readonly="readonly">
+					div {
+						/* step-start */
+						transition-timing-function: step-start;
+
+						/* step-end */
+						transition-timing-function: step-end;
+
+						/* steps */
+						transition-timing-function: steps(4, start)
+					}
+				</textarea>
 			</div>
-			<div class="line_code mt_s">
+			<div class="ol_lst mt_ms">
 				<p>변화가 점진적으로 진행되지 않고, 주어진 설정과 간격에 따라 일시에 진행되는 <code>step-start</code>, <code>step-end</code>, <code>steps</code> 가 있습니다.</p>
-				<p><code>step-start</code>는 모든 변화가 시작지점에 이루어집니다.</p>
-				<p>
-					<code>step-end</code>는 모든 변화가 종료지점에 이루어집니다.<br>
-					("<code>transition:width 2s step-end;</code>" 로 설정하였으므로, 마우스 오버 후 2초 뒤에 변화가 일어납니다.)
-				</p>
-				<p><code>steps</code>는 설정한 단계에 따라 간격을 두고 변화가 일어납니다.</p>
+				<ol class="indent mt_s">
+					<li>
+						<code>step-start</code>: 는 모든 변화가 시작지점에 이루어집니다.
+					</li>
+					<li class="mt_s">
+						<code>step-end</code>: 는 모든 변화가 종료지점에 이루어집니다.<br>
+						(<code>transition-timing-function: 2s step-end;</code>로 설정하였을 경우, 마우스 오버 후 2초 뒤에 변화가 일어납니다.)
+					</li>
+					<li class="mt_s">
+						<code>steps</code>: 는 설정한 단계에 따라 간격을 두고 변화가 일어납니다.
+					</li>
+				</ol>
 			</div>
 		</article>
 
@@ -155,8 +234,12 @@
 		<article class="indent mt_ml">
 			<h3 class="ml_mn">7. <i class="t_blue">cubic-bezier(n,n,n,n)</i></h3>
 			<p class="mt_sm t_black">처음과 끝의 속도를 0과 1 사이의 수치를 이용하여 4단계로 지정할 수 있습니다. 베지어(Bezier)라는 곡선 운동을 정의합니다.</p>
-			<div class="line_code_box mt_s">
-				<code>transition: width 2s cubic-bezier(n,n,n,n);</code>
+			<div class="uk_gist_code_box mt_ms" data-tit="transition-timing-function [cubic-bezier(n,n,n,n)]">
+				<textarea readonly="readonly">
+					div {
+						transition-timing-function: cubic-bezier(n,n,n,n);
+					}
+				</textarea>
 			</div>
 			<div class="line_code mt_s">
 				<p>
@@ -180,19 +263,23 @@
 		<h2 class="ml_mn"><i class="t_blue">transition-delay</i> 속성</h2>
 		<p class="mt_ms">
 			속성이 변한 시점과 트랜지션이 실제로 시작하는 사이에 기다리는 시간을 정의합니다.(효과의 지연시간을 정의)<br>
-			3s(3초)로 설정하면 이벤트 발생 3초 후에 transition이 작동됩니다.<br>
+			3s(3초)로 설정하면 이벤트 발생 3초 후에 <code>transition</code>이 작동됩니다.<br>
 			지연시간이 필요 없으면 생략 가능합니다.
 		</p>
-		<p class="mt_s">
-			<code>transition-delay : 1s | 1000ms;</code>
-		</p>
+		<div class="uk_gist_code_box mt_ms" data-tit="transition-delay">
+				<textarea readonly="readonly">
+					div {
+						transition-delay: 1s | 1000ms;
+					}
+				</textarea>
+		</div>
 	</section>
 
 	<!-- transition 작성 방법 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">transition</i> 작성 방법</h2>
 		<p class="mt_ms">
-			transition 작성 방법으로는 다음과 같이 사용할 수 있습니다.<br>
+			<code>transition</code> 작성 방법으로는 다음과 같이 사용할 수 있습니다.<br>
 			아래 작성방법 중 <i class="t_blue">최대 단축형</i>과 <i class="t_blue">확장 단축형</i>이 주로 사용됩니다.
 		</p>
 
@@ -203,15 +290,15 @@
 				<code>transition</code>의 속성을 분리해서 정의할 수 있습니다.<br>
 				code가 길어지는 단점이 있지만, 전체 속성(all) 대신 꼭 필요한 속성만 사용할 수 있습니다.
 			</p>
-			<div class="line_code_box line_code_number mt_ms">
-				<ul>
-					<li>div {</li>
-					<li class="indent">transition-property: transform, color, border;</li>
-					<li class="indent">transition-duration: .5s;</li>
-					<li class="indent">transition-timing-function: ease;</li>
-					<li class="indent">transition-delay: .2s;</li>
-					<li>}</li>
-				</ul>
+			<div class="uk_gist_code_box mt_ms" data-tit="transition syntax [default]">
+				<textarea readonly="readonly">
+					div {
+						transition-property: transform, color, border;
+						transition-duration: .5s;
+						transition-timing-function: ease;
+						transition-delay: .2s;
+					}
+				</textarea>
 			</div>
 		</article>
 
@@ -219,17 +306,17 @@
 		<article class="indent mt_ml">
 			<h3 class="ml_mn">2. <i class="t_blue">최대 단축형</i></h3>
 			<p class="mt_sm">
-				변경할 속성이 한 개 또는 모든 css속성일 경우에만 사용됩니다. (주로 property가 all일 경우에 많이 쓰입니다.)<br>
+				변경할 속성이 한 개 또는 모든 css속성일 경우에 사용됩니다. (주로 property가 all일 경우에 많이 쓰입니다.)<br>
 				모든 css속성(property)에 적용하고, 기본 타이밍(ease)을 사용하고, 지연시간(delay)이 없을 경우<br>
 				<code>transition:.5s;</code> 이렇게 지속시간(duration)만 선언하여 사용 가능합니다.
 			</p>
-			<div class="line_code_box line_code_number mt_ms">
-				<ul>
-					<li>div {</li>
-					<li class="indent">transition: all .5s ease 2s;</li>
-					<li class="indent">/* transition: property(css 속성) duration(지속시간) timing delay(지연시간); */</li>
-					<li>}</li>
-				</ul>
+			<div class="uk_gist_code_box mt_ms" data-tit="transition syntax [Maximum shortened]">
+				<textarea readonly="readonly">
+					div {
+						transition: all .5s ease 2s;
+						/* transition: property(css 속성) duration(지속시간) timing delay(지연시간); */
+					}
+				</textarea>
 			</div>
 		</article>
 
@@ -239,14 +326,14 @@
 			<p class="mt_sm">
 				변경할 속성이 두 개 이상일 때 사용되며, 각 속성별로 독립적인 움직임을 줄 수 있습니다.
 			</p>
-			<div class="line_code_box line_code_number mt_ms">
-				<ul>
-					<li>div {</li>
-					<li class="indent">transition:</li>
-					<li class="indent_max">transform .5s ease .2s,</li>
-					<li class="indent_max">color .3s linear 1s;</li>
-					<li>}</li>
-				</ul>
+			<div class="uk_gist_code_box mt_ms" data-tit="transition syntax [Expansion shortened]">
+				<textarea readonly="readonly">
+					div {
+						transition:
+							transform .5s ease .2s,
+							color .3s linear 1s;
+					}
+				</textarea>
 			</div>
 		</article>
 
@@ -256,19 +343,19 @@
 			<p class="mt_sm">
 				<code>transition-property</code>에 나열된 순서대로 다른 <code>transition</code>의 속성이 대입 적용됩니다.
 			</p>
-			<div class="line_code_box line_code_number mt_ms">
-				<ul>
-					<li>div {</li>
-					<li class="indent">transition-property: transform, color, border;</li>
-					<li class="indent">transition-duration: .5s, .3s, .25s;</li>
-					<li class="indent">transition-timing-function: ease, linear, linear;</li>
-					<li class="indent">transition-delay: .2s, 1s, 0s;</li>
-					<li>}</li>
-				</ul>
+			<div class="uk_gist_code_box mt_ms" data-tit="transition syntax [Substitute type]">
+				<textarea readonly="readonly">
+					div {
+						transition-property: transform, color, border;
+						transition-duration: .5s, .3s, .25s;
+						transition-timing-function: ease, linear, linear;
+						transition-delay: .2s, 1s, 0s;
+					}
+				</textarea>
 			</div>
 		</article>
 
-		<!-- 5. Steps 선언 -->
+		<!-- 5. Steps 선언
 		<article class="indent mt_ml">
 			<h3 class="ml_mn">5. <i class="t_blue">Steps 선언</i></h3>
 			<p class="mt_sm">
@@ -283,48 +370,52 @@
 				</ul>
 			</div>
 		</article>
+		-->
 
-		<!-- 6. transition 작성 시 유의사항 -->
+		<!-- 5. transition 작성 시 유의사항 -->
 		<article class="indent mt_ml">
-			<h3 class="ml_mn">6. <i class="t_blue">transition 작성 시 주의사항</i></h3>
+			<h3 class="ml_mn">5. <i class="t_blue">transition 작성 시 주의사항</i></h3>
 			<ol class="ol_lst">
-				<li class="tit_h4 line_code mt_ms">
+				<li class="tit_h4 line_code mt_m">
 					<h4 class="mb_sm weight-500">transition 속성에서 각 항목의 순서는 중요합니다.</h4>
-					<p>시간으로 해석될 수 있는 값이 첫번째에 위치한다면 transition-duration 로 적용되고, 두번째에 위치한다면 transition-delay 로 적용됩니다.</p>
 					<p>
-						속성값 목록이 알맞은 길이를 갖지 않는다면 어떻게 처리될지 궁금하다면 속성값 목록이 다른 개수를 가진 경우를 참고하세요.<br>
-						요컨대, 실제 속성의 개수보다 많이 기술된 것은 무시됩니다.
+						시간으로 해석될 수 있는 값이 첫번째에 위치한다면 <code>transition-duration</code>으로 적용되고,
+						두번째에 위치한다면 <code>transition-delay</code>으로 적용됩니다.
+					</p>
+					<p>
+						속성값 목록이 알맞은 길이를 갖지 않는다면, 어떻게 처리될지 궁금하다면 아래 <span class="t_purple">속성값 목록이 다른 개수를 가진 경우</span>를 참고하세요.<br>
+						<!--요컨대, -->실제 속성의 개수보다 많이 기술된 것은 무시됩니다.
 					</p>
 				</li>
-				<li class="tit_h4 line_code mt_m">
-					<h4 class="mb_sm weight-500">속성값 목록이 다른 개수를 가진 경우</h4>
-					<p>어떤 속성의 값 목록이 다른 것보다 짧다면, 일치되도록 그 값을 반복합니다.</p>
-					<div class="line_code_box line_code_number mt_2">
-						<ul>
-							<li>div {</li>
-							<li class="indent">transition-property: opacity, left, top, height;</li>
-							<li class="indent">transition-duration: 3s, 5s;</li>
-							<li>}</li>
-							<li>/* 위는 아래와 같이 처리합니다. */</li>
-							<li>div {</li>
-							<li class="indent">transition-property: opacity, left, top, height;</li>
-							<li class="indent">transition-duration: 3s, 5s, 3s, 5s;</li>
-							<li>}</li>
-						</ul>
+				<li class="tit_h4 mt_ml">
+					<h4 class="mb_sm weight-500 t_purple">속성값 목록이 다른 개수를 가진 경우</h4>
+					<p class="t_black">어떤 속성의 값 목록이 다른 것보다 짧다면, 일치되도록 그 값을 반복합니다.</p>
+					<div class="uk_gist_code_box indent mt_s" data-tit="transition syntax">
+						<textarea readonly="readonly">
+							div {
+								transition-property: opacity, left, top, height;
+								transition-duration: 3s, 5s;
+							}
+							/* 위는 아래와 같이 처리합니다. */
+							div {
+								transition-property: opacity, left, top, height;
+								transition-duration: 3s, 5s, 3s, 5s;
+							}
+						</textarea>
 					</div>
-					<p>어떤 속성의 값 목록이 <code>transition-property</code> 목록보다 길다면, 필요 없는 값을 잘라냅니다.</p>
-					<div class="line_code_box line_code_number mt_2">
-						<ul>
-							<li>div {</li>
-							<li class="indent">transition-property: opacity, left;</li>
-							<li class="indent">transition-duration: 3s, 5s, 2s, 1s;</li>
-							<li>}</li>
-							<li>/* 위를 아래와 같이 해석합니다. */</li>
-							<li>div {</li>
-							<li class="indent">transition-property: opacity, left;</li>
-							<li class="indent">transition-duration: 3s, 5s;</li>
-							<li>}</li>
-						</ul>
+					<p class="mt_ms t_black">어떤 속성의 값 목록이 <code>transition-property</code> 목록보다 길다면, 필요 없는 값을 잘라냅니다.</p>
+					<div class="uk_gist_code_box indent mt_s" data-tit="transition syntax">
+						<textarea readonly="readonly">
+							div {
+								transition-property: opacity, left;
+								transition-duration: 3s, 5s, 2s, 1s;
+							}
+							/* 위를 아래와 같이 해석합니다. */
+							div {
+								transition-property: opacity, left;
+								transition-duration: 3s, 5s;
+							}
+						</textarea>
 					</div>
 				</li>
 			</ol>
